Adding background color, landing page & divs

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>peyton doyle</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
     <link rel="stylesheet" href="https://use.typekit.net/cpj3kda.css">
   </head>
   <body>
-    <h1>Peyton Doyle</h1>
+    <div class="big-name">
+      <h1 class="big-name">Peyton Doyle</h1>
+    </div>
+
 
   </body>
 </html>
