Adding contact route & test link on homepage

--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <div class="big-name">
-      <h1 class="big-name">Peyton Doyle</h1>
-      <a href="http://peytondoyle.com/contact">Contact</a>
+      <h1 class="big-name">1eyton Doyle</h1>
     </div>
 
 
