Spacing for links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <div class="big-name">
       <h1 class="big-name">Peyton Doyle</h1>
+    </div>
+    <div class="navigation">
       <a href="http://peytondoyle.com/contact">Contact</a>
     </div>
 
