Fixing routes, altering contact page

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="big-name">
-      <h1 class="big-name">1eyton Doyle</h1>
+      <h1 class="big-name">Contact</h1>
     </div>
 
 
