--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="big-name">
-      <h1 class="big-name">Peyton Doyle</h1>
+      <h1 class="big-name"><a href="http://peytondoyle.com/">Peyton Doyle</a></h1>
     </div>
     <div class="navigation">
-      <a href="http://peytondoyle.com/contact">Contact</a>
+      <a class="nav-links" href="contact.html">Contact</a>
     </div>
 
 
