Revamping navigation, adding links & hover effects

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,12 @@
   <body>
     <div class="big-name">
       <h1 class="big-name">Contact</h1>
+      <div class="navigation">
+        <a href="index.html"><img class="nav-links" src="img/home.png"></img></a>
+        <a href="mailto:peyton.doyle@icloud.com"><img class="nav-links" src="img/mail.png"></img></a>
+        <a href="sms:+14349410738"><img class="nav-links" src="img/imessage.png"></img></a>
+        <a href="tel:14349410738"><img class="nav-links" src="img/iphone.png"></img></a>
+      </div>
     </div>
 
 
