--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <div class="big-name">
-      <h1 class="big-name"><a href="http://peytondoyle.com/">Peyton Doyle</a></h1>
+      <h1 class="big-name">Peyton Doyle</a></h1>
+      <div class="navigation">
+        <a href="index.html"><img class="nav-links" src="img/home.png"></img></a>
+        <a href="mailto:peyton.doyle@icloud.com"><img class="nav-links" src="img/mail.png"></img></a>
+        <a href="sms:+14349410738"><img class="nav-links" src="img/imessage.png"></img></a>
+        <a href="tel:14349410738"><img class="nav-links" src="img/iphone.png"></img></a>
+      </div>
     </div>
-    <div class="navigation">
-      <a class="nav-links" href="contact.html">Contact</a>
-    </div>
-
-
   </body>
 </html>
