Adding placeholder text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>peyton doyle</title>
     <link rel="stylesheet" type="text/css" href="portfolio.css">
     <link rel="stylesheet" href="https://use.typekit.net/cpj3kda.css">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');</style>
   </head>
   <body>
     <div class="big-name">
@@ -16,6 +17,11 @@
         <a href="sms:+14349410738"><img class="nav-links" src="img/imessage.png"></img></a>
         <a href="tel:14349410738"><img class="nav-links" src="img/iphone.png"></img></a>
       </div>
+    </div>
+
+    <div class="placeholder">
+      <p>Designer & developer based in Washington D.C.</p>
+      <p>Portfolio coming soon.</p>
     </div>
   </body>
 </html>
