Shortening placeholder text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="placeholder">
-      <p>Designer & developer based in Washington D.C.</p>
+      <p>Designer & developer based in D.C.</p>
       <p>Portfolio coming soon.</p>
     </div>
   </body>
